# red-velvet-engine

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  THIRD_PARTY_LICENSES.md  VERSION.md  about.hbs  about.toml  bacon.toml  build.rs  deny.toml  docker-compose.yml  justfile  rustfmt.toml
crates/iso4217-catalog/: Cargo.toml  build.rs
crates/iso4217-catalog/src/: lib.rs
crates/rve/: Cargo.toml  build.rs
crates/rve-assets/: Cargo.toml
crates/rve-assets/src/: asset.rs  lib.rs
crates/rve-core/: Cargo.toml
crates/rve-core/src/: lib.rs
crates/rve-core/src/application/: decision_service.rs  mod.rs  rule_command_service.rs  rule_query_service.rs  runtime_control_service.rs
crates/rve-core/src/domain/: context.rs  error.rs  event.rs  mod.rs  prelude.rs  rule.rs  signals.rs  types.rs
crates/rve-core/src/domain/common/: channels.rs  codes.rs  entity_type.rs  flag.rs  identifiers.rs  mod.rs  money.rs  score.rs  severity.rs  timestamp_ms.rs  types.rs  validation.rs
crates/rve-core/src/domain/event/: context.rs  error.rs  event.rs  features.rs  header.rs  mod.rs  parties.rs  party.rs  payload.rs  signals.rs
crates/rve-core/src/domain/event/payload/: mod.rs  value_transfer.rs
crates/rve-core/src/domain/monetary/: crypto.rs  currency.rs  mod.rs  money.rs
crates/rve-core/src/domain/rule/: action.rs  audit.rs  decision.rs  definition.rs  enforcement.rs  evaluation.rs  expression.rs  function.rs  meta.rs  mod.rs  mode.rs  policy.rs  rollout.rs  rule.rs  schedule.rs  scope.rs  state.rs
crates/rve-core/src/ports/: mod.rs  rule_engine.rs  rule_repository.rs
crates/rve-core/src/services/: connector.rs  engine.rs  mod.rs
crates/rve-crypto/: Cargo.toml
crates/rve-crypto/src/: crypto.rs  error.rs  lib.rs  network.rs  token.rs
crates/rve-money/: Cargo.toml
crates/rve-money/src/: amount.rs  currency.rs  error.rs  lib.rs  money.rs
crates/rve-test-suite/: Cargo.toml
crates/rve-test-suite/src/: lib.rs
crates/rve-test-suite/tests/: api_contract.rs  event_contract.rs  rule_contract.rs  runtime_engine.rs
crates/rve/src/: about.rs  adapter.rs  banner.rs  bootstrap.rs  cli.rs  error.rs  lib.rs  logger.rs  main.rs
crates/rve/src/connector/: mod.rs
crates/rve/src/engine/: dataflow.rs  mod.rs
crates/rve/src/http/: health.rs  mod.rs  openapi.rs  state.rs  status.rs
crates/rve/src/http/api_v1/: connectors.rs  decisions.rs  engine.rs  metadata.rs  mod.rs  rules.rs
crates/rve/src/http/api_v1/rules/: errors.rs  handlers.rs  logic_validation.rs  mod.rs  patch.rs  types.rs
crates/rve/src/http/pages/: api_docs.html  home.html  overview.md
crates/rve/src/http/routes/: mod.rs  status.rs
crates/rve/src/store/: mod.rs  rules.rs
crates/rve/tests/: rules_concurrency.rs
docs/: A.md  api.md  api_frontend.md  money-contract.md  overview.md  roadmap.md  rules_decisions_contract.md  rules_playbook.md
docs/examples/: decision_high_risk_device.json
docs/testing/: README.md
src/: about.rs  banner.rs  bootstrap.rs  cli.rs  error.rs  lib.rs  logger.rs  main.rs  version.rs
src/engine/: dataflow.rs  mod.rs
src/http/: contracts.rs  health.rs  openapi.rs
src/http/api_v1/: decisions.rs  engine.rs  errors.rs  metadata.rs  mod.rs  ui.rs
src/http/api_v1/decisions/: errors.rs  evaluate.rs  mod.rs  payload.rs
src/http/api_v1/rules/: delete.rs  errors.rs  get.rs  logic_validation.rs  mod.rs  patch.rs  post.rs  put.rs  requests.rs  responses.rs  types.rs  validation.rs  versioning.rs
src/infrastructure/: mod.rs
src/infrastructure/persistence/: mod.rs
src/infrastructure/runtime/: dataflow_rule_engine.rs  mod.rs
src/interfaces/: mod.rs
src/interfaces/cli/: args.rs  mod.rs
src/interfaces/cli/commands/: about.rs  mod.rs  serve.rs
src/interfaces/http/: contracts.rs  health.rs  mod.rs  openapi.rs  state.rs
src/interfaces/http/api_v1/: engine.rs  errors.rs  mod.rs  ui.rs
src/interfaces/http/api_v1/decisions/: errors.rs  evaluate.rs  mapper.rs  mod.rs
src/interfaces/http/api_v1/decisions/dto/: mod.rs  request.rs  response.rs
src/interfaces/http/api_v1/rules/: delete.rs  errors.rs  get.rs  mapper.rs  mod.rs  patch.rs  post.rs  put.rs
src/interfaces/http/api_v1/rules/dto/: mod.rs  request.rs  response.rs
tools/: update_iso_catalog.sh
