[workspace]
resolver = "3"
members = ["crates/*"]
default-members = ["crates/rve"]

[workspace.package]
authors = ["Gabriel Maizo <maizogabriel@gmail.com>"]
edition = "2024"
license = "BUSL-1.1"
description = "Red Velvet Engine — Black Cherry 🍒 — stateless fraud decision engine"
keywords = ["fraud", "risk", "security", "rules-engine"]

[workspace.dependencies]
async-trait = "0.1.83"
datalogic-rs = "4.0.14"
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
thiserror = "2.0.18"
