[package]
name = "rve-assets"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true

[dependencies]
rve-money = { path = "../rve-money" }
rve-crypto = { path = "../rve-crypto" }
iso4217-catalog = { path = "../iso4217-catalog" }
thiserror = { workspace = true }
