[package]
name = "rve-core"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
semver = { version = "1.0.27", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { workspace = true }
