[package]
name = "rve-core"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true

[dependencies]
async-trait = { workspace = true }
chrono = { version = "0.4.43", features = ["serde"] }
chrono-tz = "0.10.4"
semver = { version = "1.0.27", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { version = "1.18.1", features = ["serde", "v7"] }
