[package]
name = "rve-money"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true

[dependencies]
rve-crypto = { path = "../rve-crypto" }
iso4217-catalog = { path = "../iso4217-catalog" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
