[package]
name = "rve-test-suite"
version = "0.1.0"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true

[dependencies]
rve = { path = "../rve" }
rve-core = { path = "../rve-core" }
serde_json = { workspace = true }
semver = { version = "1.0.27", features = ["serde"] }
chrono = { version = "0.4.43", features = ["serde"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
axum = "0.8.8"
tower = { version = "0.5.2", features = ["util"] }
