[package]
name = "rve"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
anyhow = "1.0.100"
async-trait = { workspace = true }
axum = "0.8.8"
clap = { version = "4.5.54", features = ["derive"] }
colored = "3.1.1"
indoc = "2.0.7"
rve-core = { version = "0.1.0", path = "../rve-core" }
serde_json = { workspace = true }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "signal"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
arc-swap = "1.8.0"
chrono = "0.4.43"
serde = { version = "1.0.228", features = ["derive"] }
dataflow-rs = "2.0.15"
semver = { version = "1.0.27", features = ["serde"] }
redis = { version = "1.0.3", features = ["tokio-comp"] }
datalogic-rs = { workspace = true }
tower-http = { version = "0.5.2", features = ["cors"] }
validator = { version = "0.20.0", features = ["derive"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "uuid"] }
