[package]
name = "rve"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
rve-core = { version = "0.1.0", path = "../rve-core" }
async-trait = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dotenvy = "0.15.7"

dataflow-rs = "2.1"
datalogic-rs = "4"

anyhow = "1.0.100"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "signal"] }
clap = { version = "4.5.54", features = ["derive"] }
colored = "3.1.1"
indoc = "2.0.7"
redis = { version = "1.0.3", features = ["tokio-comp"] }
validator = { version = "0.20.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
semver = { version = "1.0.27", features = ["serde"] }
chrono = "0.4.43"
axum = "0.8.8"
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "uuid"] }
tower-http = { version = "0.5.2", features = ["cors"] }
